# hokori

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
docs/: privacy_and_safety.md  providers.md  rule_sources.md  scan_design.md
rules/: analysis.toml  apps.toml  developer.toml  macos.toml  projects.toml  protect.toml  rulesets.toml  system.toml
rules/apps/: chromium.toml
rules/macos/: deep_clean.toml  developer.toml  protect.toml  standard.toml
src/: action.rs  compiler.rs  config.rs  engine.rs  gitignore.rs  main.rs  matcher.rs  report.rs  rules.rs  scanner.rs  taxonomy.rs  tui.rs  util.rs  walk.rs
src/providers/: ai_assets.rs  android.rs  app_leftovers.rs  command.rs  docker.rs  duplicates.rs  git.rs  homebrew.rs  mod.rs  native_gc.rs  stale_files.rs  tool_cache_gc.rs  toolchains.rs  vms.rs  xcode.rs
