[package]
name = "cleaner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
libc = "0.2"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
