[package]
name = "cleaner"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
globset = "0.4"
ignore = "0.4"
libc = "0.2"
ratatui = "0.30.1"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
trash = "5"
tui-tree-widget = "0.24.0"

[profile.release]
lto = "thin"
