[package]
name = "hokori"
version = "0.2.0"
edition = "2024"
description = "A cautious, TUI-first macOS disk cleaner"
readme = "README.md"
license = "MIT"
repository = "https://github.com/f1shy-dev/hokori"
keywords = ["macos", "cleanup", "disk", "tui", "developer-tools"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
globset = "0.4"
ignore = "0.4"
libc = "0.2"
plist = "1"
ratatui = "0.30.1"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
trash = "5"

[profile.release]
lto = "thin"
